--- a/Functional_Diversity/Functional_Diversity_Models.Rmd
+++ b/Functional_Diversity/Functional_Diversity_Models.Rmd
@@ -532,6 +532,59 @@ pretty_table
 # gtsave(data = pretty_table, filename = "FD_Best_Fit_table.png", path = "~/github/Tejon_Functional_Traits/Figures")
 
 ```
+#### AIC Supplement Table
+```{r}
+dredge_FRic <- as.data.frame(dredge(FRic)) %>%
+  mutate(CWM = "FRic") %>% 
+  dplyr::select(CWM, climate, treatment, "climate:treatment", AICc)
+
+dredge_FEve <- as.data.frame(dredge(FEve)) %>%
+  mutate(CWM = "FEve") %>%
+  dplyr::select(CWM, climate, treatment, "climate:treatment", AICc)
+
+dredge_FDiv <- as.data.frame(dredge(FDiv)) %>%
+  mutate(CWM = "FDiv") %>%
+  dplyr::select(CWM, climate, treatment, "climate:treatment", AICc)
+
+dredge_FDis <- as.data.frame(dredge(FDis)) %>%
+  mutate(CWM = "FDis") %>%
+  dplyr::select(CWM, climate, treatment, "climate:treatment", AICc)
+
+dredge_table <- dredge_FRic %>% 
+  full_join(dredge_FEve) %>% 
+  full_join(dredge_FDiv) %>% 
+  full_join(dredge_FDis) %>% 
+  mutate(climate = str_replace(climate, "\\+","x")) %>%
+  mutate(treatment = str_replace(treatment, "\\+","x")) %>% 
+  mutate(`climate:treatment` = str_replace(`climate:treatment`, "\\+","x"))
+dredge_table
+
+fd_aic_sup <- dredge_table %>% 
+  as_tibble() %>% 
+  dplyr::group_by(CWM) %>%
+  gt() %>% 
+  tab_header(
+    title = "FD Best-Fit Models"
+  ) %>% 
+  tab_spanner(
+    label = "Fixed Effects Terms",
+    columns = vars(climate, treatment, "climate:treatment")
+  ) %>% 
+  fmt_missing(
+    columns = vars(climate, treatment, "climate:treatment"),
+    missing_text = " "
+  ) %>% 
+  tab_source_note(
+    source_note = "x indicates selection of fixed effect term for best-fit model"
+  )  %>% 
+  cols_align(align = "center")
+
+fd_aic_sup
+
+gtsave(data = fd_aic_sup, filename = "FD_AIC_Supp.png", path = "~/github/Tejon_Functional_Traits/Figures")
+
+```
+
 #### EMM Graphs
 ```{r}
 # color of arrows
